[tool.poetry]
name = "skit-calls"
version = "0.2.9"
description = "Library to fetch calls from a given environment."
authors = ["ltbringer <amresh.venugopal@gmail.com>"]
license = "GPL-3.0-only"
repository = "https://github.com/skit-ai/skit-calls"

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.8.1"
aiofiles = "^0.8.0"
PyYAML = "^5.3"
pandas = "^1.3.5"
toml = "^0.10.2"
loguru = "^0.5.3"
tqdm = "^4.62.3"
psycopg2 = "^2.9.3"
pydash = "^5.1.0"
attrs = "^21.4.0"
dvc = {extras = ["s3"], version = "^2.10.2"}

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
httpretty = "^1.1.4"
black = "^21.12b0"
isort = "^5.10.1"
mypy = "^0.930"
aioresponses = "^0.7.3"
pytest-asyncio = "^0.16.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
skit-calls = "skit_calls.cli:main"
