[tool.poetry]
name = "skit-calls"
version = "0.2.30"
description = "Library to fetch calls from a given environment."
authors = ["ltbringer <amresh.venugopal@gmail.com>"]
license = "GPL-3.0-only"
repository = "https://github.com/skit-ai/skit-calls"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
aiofiles = "0.8.0"
aiohttp = "3.8.1"
attrs = "20.3.0"
dvc = {extras = ["s3"], version = "2.9.5"}
loguru = "0.5.3"
numpy = "1.22.0"
pandas = "1.4.2"
psycopg2 = "2.9.3"
pydash = "^5.1.0"
PyYAML = "^5.3"
toml = "0.10.2"
tqdm = "4.62.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
httpretty = "^1.1.4"
black = "^21.12b0"
isort = "^5.10.1"
mypy = "^0.930"
aioresponses = "^0.7.3"
pytest-asyncio = "^0.16.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
skit-calls = "skit_calls.cli:main"
