[tool.poetry]
name = "skit-calls"
version = "0.2.56"
description = "Library to fetch calls from a given environment."
authors = ["ltbringer <amresh.venugopal@gmail.com>"]
license = "GPL-3.0-only"
repository = "https://github.com/skit-ai/skit-calls"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
aiobotocore = "2.14.0"
aiofiles = "0.8.0"
aiohttp = "^3.10.4"
attrs = "24.2.0"
dvc = {extras = ["s3"], version = "3.55.1"}
loguru = "0.5.3"
numpy = "^1.22.0"
pandas = "^1.4.2"
psycopg2-binary = "^2.9.3"
pydash = "^6.0.0"
PyYAML = "^6.0"
toml = "0.10.2"
tqdm = "4.66.3"
botocore = ">=1.35.0,<1.35.8"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
httpretty = "^1.1.4"
black = "^24.3.0"
isort = "^5.10.1"
mypy = "^0.930"
aioresponses = "^0.7.3"
pytest-asyncio = "^0.16.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
skit-calls = "skit_calls.cli:main"
